--- a/app/templates/errors/401.html
+++ b/app/templates/errors/401.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-            <h1> Access Denied, 403 Error </h1>
-            <h3> You do not have sufficient permissions to access this page. </h3>
+            <h1> Unauthorized, 401 Error </h1>
+            <h3> The requested resource requires an authentication.</h3>
             <hr >
             <a href="{{ url_for('homepage') }}" >
                 Home
