--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-            <h2> 404 Error </h1>
+            <h2> Resource not found, 404 Error </h1>
             <h3> The page you're looking for doesn't exist. </h3>
             <hr >
             <a href="{{ url_for('homepage') }}">
