--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-            <h1> 500 Error </h1>
+            <h1> Oh boy, 500 Error </h1>
             <h3> The server encountered an internal error. That's all we know. </h3>
             <hr >
             <a href="{{ url_for('homepage') }}">
